--- a/Table/models/Lightgbm_models.ipynb
+++ b/Table/models/Lightgbm_models.ipynb
@@ -132,7 +132,10 @@
     "            y_pred_lgb = gbm.predict(X_val, num_iteration=gbm.best_iteration)\n",
     "            \n",
     "            ##評価関数\n",
-    "            self.score_list.append(MAPE(y_val, y_pred_lgb))\n",
+    "            #(y_val, y_pred_lgb)\n",
+    "            self.score_list.append()\n",
+    "            \n",
+    "            \n",
     "            self.models.append(gbm)\n",
     "            \n",
     "        print(\"mean_score:\", np.mean(self.score_list))\n",
@@ -150,8 +153,8 @@
     "            \n",
     "        pred = (np.mean(test_pred, axis=1) ).astype(int)  # 平均をとって、0と１に変換\n",
     "        \n",
-    "        submit = pd.DataFrame({'id':test_id, 'keiyaku_pr':pred})\n",
-    "        submit.to_csv(name, index=None, header=None, sep='\\t')"
+    "        submit = pd.DataFrame({'id':test_id, 'pred':pred})\n",
+    "        submit.to_csv(name, index=None, header=None)"
    ]
   },
   {
