--- a/Table/preprocessing/numeric_data.ipynb
+++ b/Table/preprocessing/numeric_data.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# 前処理リスト\n",
     "\n",
-    "## 1. 数値データ(離散化&スケーリング&変換)\n",
+    "## 数値データ\n",
     "1. 2値化  \n",
     "2. 離散化\n",
     "3. Standard(正規化)\n",
@@ -14,28 +14,15 @@
     "5. $l^2$正規化\n",
     "6. 対数変換\n",
     "7. べき変換\n",
-    "8. Box-Cox変換\n",
-    "\n",
-    "## 2. カテゴリデータ(エンコード)\n",
-    "1. LabelEncoding\n",
-    "2. One-Hot Encoding\n",
-    "3. dummy Encoding\n",
-    "4. target Encoding\n",
-    "\n",
-    "\n",
-    "## 3. テキストデータ\n",
-    "\n",
-    "## 4. 次元圧縮\n",
-    "1. PCA"
+    "8. Box-Cox変換"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "# 数値データ\n",
-    "## 2値化"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -71,7 +58,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.preprocessing import StandardScaler\n"
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "sd = StandardScaler()\n",
+    "sd.fit(X)\n",
+    "\n",
+    "X_sd = sd.transform(X)\n",
+    "\n",
+    "X_sd = sd.fit_transform(X)"
    ]
   },
   {
@@ -86,7 +80,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "mm = MinMaxScaler()\n",
+    "mm.fit(X)\n",
+    "\n",
+    "X_mm = mm.transform(X)\n",
+    "\n",
+    "X_mm = mm.fit_transform(X)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -120,7 +123,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "np.log(X)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -155,13 +160,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -185,18 +183,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# カテゴリデータ\n",
-    "## Label Encoding"
+    "# 離散化"
    ]
   },
   {
@@ -205,69 +195,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.preprocessing import Binarizer\n",
     "\n",
-    "le = LabelEncoder()\n",
-    "le.fit(train[i])\n",
-    "train[i] = le.transform(train[i])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## One-Hot Encoding"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## pandasを使用する\n",
-    "## dummy_na=True で欠測値あり指定\n",
-    "train = pd.concat([train, pd.get_dummies(train[i])], axis=1, join='inner')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## dummu Encoding"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## pandasを使用する\n",
-    "## dummy_na=True で欠測値あり指定\n",
+    "#閾値を決める\n",
+    "binarizer = Binarizer(threshold)\n",
     "\n",
-    "train = pd.concat([train, pd.get_dummies(train[i], drop_first=True)], axis=1, join='inner')"
+    "#複数の閾値を決める\n",
+    "binarizer = Binarizer([th1, th2, th3])\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Target Encoding"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# テキストデータ"
+    "# Kmeansで疑似クラス分け"
    ]
   },
   {
@@ -275,34 +217,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "# 次元圧縮"
+    "from sklearn.cluster import KMeans\n",
+    "\n",
+    "cluster = KMeans(n, random_state=0)\n",
+    "cluster.fit(X)\n",
+    "pred = cluster.predict(X)"
    ]
   },
   {
